# jazz

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
service/: com.jazz.daemon.plist  jazz.service
src/: main.rs
