[package]
name = "jazz"
version = "0.1.0"
edition = "2021"
description = "A daemon that renders markdown files over HTTP on your local network"

[dependencies]
actix-web = "4"
pulldown-cmark = "0.10"
clap = { version = "4", features = ["derive"] }
dirs = "5"
tokio = { version = "1", features = ["full"] }
notify = "7"
